# ZonaiAnvil

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/ZonaiAnvil/: main.cpp
docs/: DEPENDENCIES.md  PROTOCOL.md
include/: AppStateMachine.hpp  CommunicationManager.hpp  DeviceParameter.hpp  FontManager.hpp  ICommunication.hpp  LinuxSerialPort.hpp  Log.hpp  MockSerialPort.hpp  Protocol.hpp  ProtocolHandler.hpp  ShaderManager.hpp  ThemeManager.hpp  UIContext.hpp  UIManager.hpp  WindowSystem.hpp
resources/fonts/: OFL.txt
resources/shaders/: bayer2x2.fs  bayer4x4.fs  crt.fs  sdf.fs
scripts/: build.sh  fetch-requirements.sh  format.sh  run-simulator.sh
src/: CommunicationManager.cpp  FontManager.cpp  LinuxSerialPort.cpp  ProtocolHandler.cpp  ShaderManager.cpp  ThemeManager.cpp  UIManager.cpp  WindowSystem.cpp
